i have to work on making the website not affected by the dark mode of browser, i have to solve the problem of extra space in the section

--- a/MediaQueries.css
+++ b/MediaQueries.css
@@ -1,6 +1,3 @@
-:root {
-  color-scheme: only light;
-}
 /* display the hamburger menu for the screen size max upto 1200px and if greater than that it display the desktop navigation bar */
 /* media query for screen size of 1200px or greater */
 /* responsive for laptop and bigger screens */
